@@ -1,5 +1,5 @@
 CACHE MANIFEST
-# ref 903
+# ref 906
 
 CACHE:
 # CSS
@@ -227,6 +227,9 @@ images/pbar-ani.gif
 images/pdf.png
 images/pdf_hover.png
 images/Percentage48.png
+images/Phone.png
+images/Phone48_On.png
+images/Phone48_Off.png
 images/pIkfp.gif
 images/print.png
 images/print_hover.png
